--- a/_config.yml
+++ b/_config.yml
@@ -59,11 +59,9 @@ forms:
       value: -7861934959779167198
 
 footer:
-  image: /assets/img/gsa-logo-dark.jpg
-  email:
+  image: https://placehold.it/100x100 # /assets/img/gsa-logo-dark.jpg
   twitter:
-    - 18f
-  text: This site was built using <a href="https://federalist.18f.gov/" target="_blank">Federalist, from 18F</a>. # Change to a tag line for your agency
+    - ChildWelfareGov
 
 # Build settings
 markdown: kramdown
