--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ forms:
       value: -7861934959779167198
 
 footer:
-  image: https://placehold.it/100x100 # /assets/img/gsa-logo-dark.jpg
+  image: /assets/img/logo-acf-2x.png
   twitter:
     - ACYFgov
 
