--- a/_data/submission-listing.yml
+++ b/_data/submission-listing.yml
@@ -1,4 +1,4 @@
 title: Submit your product
 description: This hub is a wiki and can be edited by the public. Adding your own product is easy!
 link: Get started
-image: /assets/img/code2.jpg
+image: /assets/img/Code2.jpg
