add two new categories

--- a/_data/facets.yml
+++ b/_data/facets.yml
@@ -1,2 +1,2 @@
 users: "Agency Leadership,Biological Families,Children,Data Analysts,Foster Families,Kinship Families,Service Providers,Social Workers,Technology Leadership,Youth"
-categories: "Community Resources,Permanency,Safety,Transitioning Out,Wellbeing,Youth Empowerment"
+categories: "Case Management,Community Resources,Data Analytics,Permanency,Safety,Transitioning Out,Wellbeing,Youth Empowerment"
